# metan

./: .gitignore  AUTHORS.md  README.md  README.md.pp  gen.py  index.html.pm  index.ptree  info.rkt  pollen.rkt  pyproject.toml  styles.css.pp  tables.md  template.html.p
.github/workflows/: ci.yml
creatures/: index.ptree  info.csv  info.csv.pp  jnunjicanyp.html.pm  template.html.p
scribblings/: metan.scrbl
