[tool.poetry]
authors = ["Eli <88557639+lishaduck@users.noreply.github.com>"]
description = "CSV to Markdown Table Converter"
name = "metan"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
pandas = { version = "^2.1.2", extras = ["output-formatting"] }
python = ">=3.11, <3.13"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.0"
ruff = "^0.1.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
